2010-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/z80/peep.c:
	  Fixed #3117748, improved fix for #3109557.

2010-11-26 Raphael Neider <rneider AT web.de>

	* src/pic14/glue.c (emitIvals): end retlw instruction with newline,
	  fixes #3119071.

2010-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/SDCCpeeph.c:
	  Fixed #3109557.

2010-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole fix.

2010-11-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/main.c (_ds390_genIVT, _ds390_genInitStartup): keep flat24 mode
	  off before _sdcc_external_startup is called
	* device/lib/ds390/tinibios.c (_sdcc_external_startup): pop 16 bit address,
	  push 24 bit, don't call anything before the changeover to flat24 mode
	* support/regression/ports/ds390/spec.mk: start uCsim in 16 bit mode

2010-11-07 Borut Razem <borut.razem AT siol.net>

	* Makefile.common.in, sdcc_vc_in.h, sdccconf_in.h, src/pic14/main.c,
	  src/port.h, src/SDCCast.c, src/SDCCmain.c, src/SDCCopt.c,
	  src/SDCCpeeph.c, src/SDCCsymt.c:
	  TARGET_ID_PIC1 renamed to TARGET_ID_PIC14,
	  TARGET_IS_PIC renamed to TARGET_IS_PIC14
	  OPT_DISABLE_PIC renamed to OPT_DISABLE_PIC14
	* support/Util/dbuf.c, support/Util/dbuf.h: added function dbuf_detach_c_str()

2010-11-06 Borut Razem <borut.razem AT siol.net>

	* support/Util/MySystem.c: use native WIN32 API calls in sdcc_pclose()

2010-11-05 Borut Razem <borut.razem AT siol.net>

	* support/Util/MySystem.c: use native WIN32 sdcc_popen and sdcc_pclose
	  solution due to a bug in wine msvrct.dll popen implementation
	* support/Util/MySystem.c, support/Util/MySystem.h,  src/SDCCmain.c,
	  src/ds390/main.c, src/pic14/main.c, src/pic16/main.c, src/z80/main.c:
	  my_xxxx() renamed to sdcc_xxxx()

2010-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCcse.c:
	  Optimization for & on booleans.
	* src/z80/gen.c,
	  src/z80/peeph-z80.def,
	  support/regression/tests/bitopcse.c: